--- a/StockTradingClient/Main.fxml
+++ b/StockTradingClient/Main.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 
+
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="631.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="StockTradingClient.MainController">
   <children>
     <Button fx:id="BrokerageFirm" layoutX="152.0" layoutY="142.0" mnemonicParsing="false" onAction="#handleButtonAction_btnAddBrokerageFirm" prefWidth="130.0" text="Brokerage Firm" />
@@ -21,11 +22,12 @@
     <ToggleButton fx:id="HackMode" blendMode="SRC_OVER" mnemonicParsing="false" onAction="#handleButtonAction_btnHackMode" prefWidth="135.0" selected="false" text="Hack Mode Off" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
     <Button fx:id="ChangePassword" mnemonicParsing="false" onAction="#handleButtonAction_btnChangePassword" prefWidth="135.0" text="Change Password" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" />
     <Button fx:id="Administrator" layoutX="14.0" layoutY="192.0" mnemonicParsing="false" onAction="#handleButtonAction_btnAddAdmin" prefWidth="130.0" text="Administrator" />
-    <Button fx:id="StockView" layoutX="482.0" layoutY="192.0" mnemonicParsing="false" onAction="#handleButtonAction_btnStockView" prefWidth="130.0" text="View Stocks" />
+    <Button fx:id="StockView" layoutX="482.0" layoutY="143.0" mnemonicParsing="false" onAction="#handleButtonAction_btnStockView" prefWidth="130.0" text="View Stocks" />
     <Button fx:id="LogView" layoutX="14.0" layoutY="242.0" mnemonicParsing="false" onAction="#handleButtonAction_btnLogView" prefWidth="130.0" text="View Logs" />
     <Button fx:id="TradingSession" layoutX="14.0" layoutY="294.0" mnemonicParsing="false" onAction="#handleTradingSessionButton" prefWidth="130.0" text="Trading Session" />
-    <Button fx:id="ViewSessionInfo" layoutX="337.0" layoutY="294.0" mnemonicParsing="false" onAction="#handleViewSessionInfoButton" prefWidth="159.0" text="Trading Session Info" />
+    <Button fx:id="ViewSessionInfo" layoutX="337.0" layoutY="294.0" mnemonicParsing="false" onAction="#handleViewSessionInfoButton" prefWidth="130.0" text="Trading Session Info" />
     <Button fx:id="Transactions" layoutX="152.0" layoutY="294.0" mnemonicParsing="false" onAction="#handleTransactionButton" prefWidth="130.0" text="Transactions" />
     <Button fx:id="OrderView" layoutX="18.0" layoutY="142.0" mnemonicParsing="false" onAction="#handleButtonAction_btnOrderView" prefWidth="126.0" text="View Orders" />
+    <Label fx:id="lblErrorMessage" alignment="CENTER" layoutX="166.0" layoutY="368.0" prefWidth="301.0" text="Label" textAlignment="CENTER" textFill="RED" visible="false" />
   </children>
 </AnchorPane>
