--- a/StockTradingClient/Transactions.fxml
+++ b/StockTradingClient/Transactions.fxml
@@ -16,5 +16,6 @@
     <Button fx:id="rollBackButton" layoutX="351.0" layoutY="377.0" mnemonicParsing="false" onAction="#handleRollBackButton" text="Roll Back Selected Transaction" />
     <Label layoutX="14.0" layoutY="14.0" text="Active Session Transactions:" />
     <Button fx:id="refresh" layoutX="282.0" layoutY="377.0" mnemonicParsing="false" onAction="#handleRefreshButton" text="Refresh" />
+    <Label fx:id="lblErrorMessage" alignment="CENTER" layoutX="14.0" layoutY="379.0" prefWidth="259.0" text="Label" textFill="RED" visible="false" />
   </children>
 </AnchorPane>
